[package]
name = "fluency"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = "0.16"
cpal = "0.15"
hound = "3.5"
minimp3 = "0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arboard = "3"
ureq = "2"
dirs = "5"
eframe = "0.31"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llama-cpp-2 = "0.1"


[[bin]]
name = "fluency"
path = "src/main.rs"
